load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = [
        "diagnostics.go",
        "tempfile.go",
        "utils.go",
    ],
    importpath = "github.com/bazelbuild/buildtools/buildifier/utils",
    visibility = ["//buildifier:__subpackages__"],
    deps = [
        "//build",
        "//warn",
    ],
)

go_test(
    name = "utils_test",
    srcs = ["utils_test.go"],
    embed = [":utils"],
)

alias(
    name = "go_default_library",
    actual = ":utils",
    visibility = ["//visibility:public"],
)
