load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["bzlmod.go"],
    importpath = "github.com/bazelbuild/buildtools/edit/bzlmod",
    visibility = ["//visibility:public"],
    deps = [
        "//build:go_default_library",
        "//labels:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["bzlmod_test.go"],
    embed = [":go_default_library"],
)
