load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["buildifier.go"],
    importpath = "github.com/bazelbuild/buildtools/edit/safe",
    visibility = ["//visibility:public"],
    deps = [
        "//build:go_default_library",
        "//edit:go_default_library",
    ],
)
