load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "safe",
    srcs = ["buildifier.go"],
    importpath = "github.com/bazelbuild/buildtools/edit/safe",
    visibility = ["//visibility:public"],
    deps = [
        "//build",
        "//edit",
    ],
)

alias(
    name = "go_default_library",
    actual = ":safe",
    visibility = ["//visibility:public"],
)
